--- a/src/components/menu/footer/footer.css
+++ b/src/components/menu/footer/footer.css
@@ -1,3 +1,6 @@
+footer {
+    text-align: center;
+}
 .icon {
     cursor: pointer;
 }
